feat(simulated annealing): Judment and Mutation
Function for Mutation moved from MutationTest to Mutation, added comments to show what more functions need to be added