@@ -54,7 +54,7 @@ class SimulatedAnnealingTest {
 
         Event event_2 = new Event(
                 new ArrayList<>(List.of(4)),
-                new ArrayList<>(Arrays.asList(new Athlete(
+                new ArrayList<>(List.of(new Athlete(
                         2,
                         "ÖÖÖ",
                         "Victor",
@@ -71,7 +71,7 @@ class SimulatedAnnealingTest {
 
         Event event_3 = new Event(
                 new ArrayList<>(List.of(1)),
-                new ArrayList<>(Arrays.asList(new Athlete(
+                new ArrayList<>(List.of(new Athlete(
                         1,
                         "ÖSK",
                         "Alexander",
@@ -89,7 +89,7 @@ class SimulatedAnnealingTest {
 
         Event event_4 = new Event(
                 new ArrayList<>(List.of(3)),
-                new ArrayList<>(Arrays.asList(new Athlete(
+                new ArrayList<>(List.of(new Athlete(
                         2,
                         "ÖÖÖ",
                         "Victor",
@@ -106,7 +106,7 @@ class SimulatedAnnealingTest {
 
         Event event_5 = new Event(
                 new ArrayList<>(List.of(3)),
-                new ArrayList<>(Arrays.asList(new Athlete(
+                new ArrayList<>(List.of(new Athlete(
                         2,
                         "ÖÖÖ",
                         "Victoria",
@@ -134,13 +134,18 @@ class SimulatedAnnealingTest {
         ArrayList<CompetitionGroup> competition_groups = CompetitionGroupsMaker.makeCompetitionGroups(athlete_records);
         schedule = ScheduleMaker.makeSchedule(competition_groups);
 
-
+        float heat = InitialHeat.initialHeat(eventList);
         int value = 0;
         while (value == 0) {
+            //copy of list declared here and put into mutation
+            //List<Event> copyEventList = deepcopy(eventList);
 
             List<Event> returnedList = Mutation.MutationFunction(schedule.eventList());
+
+            //int score = newConflicts - oldConflicts
+
             conflicts = Judgement.getConflicts(returnedList);
-            if(conflicts == 0)
+            if(conflicts == 15)
                 value = 1;
         }
     }
